--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.74"
-            android:contentDescription="@string/todo" />
+            android:contentDescription='TO DO' />
 
         <TextView
             android:id="@+id/itemDate"
