--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -36,7 +36,8 @@
             app:layout_constraintEnd_toStartOf="@+id/recipe_info"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            android:contentDescription="image" />
 
         <TextView
             android:id="@+id/recipe_name"
