--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -4,14 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <data>
-        <variable
-            name="isRecipe"
-            type="com.example.raylierecipes.model.RecipeData" />
-        
-        
-    </data>
-    
+
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -30,14 +23,14 @@
             android:id="@+id/recipe_img"
             android:layout_width="140dp"
             android:layout_height="140dp"
+            android:contentDescription="@string/recipeimage"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/recipe_info"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            android:contentDescription="image" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/recipe_name"
@@ -49,7 +42,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:gravity="center"
-            android:text="@{isRecipe.name}"
+            android:text="TextView"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -69,7 +62,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="16dp"
             android:gravity="center"
-            android:text="@{isRecipe.info}"
+            android:text="TextView"
             android:textColor="@android:color/darker_gray"
             android:textSize="15sp"
             android:textStyle="normal"
