--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -38,24 +38,48 @@
                 android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"/>
+
             <TextView
                 android:id="@+id/recipe_info"
-                android:layout_marginTop="15dp"
-                android:textSize="16sp"
-                android:gravity="start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
+                android:gravity="center_horizontal"
                 android:textColor="@color/black"
-                android:textStyle="italic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:textSize="20sp"
+                android:textStyle="bold|italic" />
 
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="240dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/description"
+                        android:layout_width="match_parent"
+                        android:layout_height="226dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginRight="16dp"
+                        android:singleLine="false"
+                        android:text="TextView"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </ScrollView>
 
 
         </LinearLayout>
 
 
     </ScrollView>
+
 </LinearLayout>
 </layout>
