--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -54,7 +54,7 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="240dp">
+                android:layout_height="241dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -64,14 +64,14 @@
                     <TextView
                         android:id="@+id/description"
                         android:layout_width="match_parent"
-                        android:layout_height="226dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginRight="16dp"
-                        android:singleLine="false"
                         android:text="TextView"
                         android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:verticalScrollbarPosition="defaultPosition" />
                 </LinearLayout>
             </ScrollView>
 
