--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,37 +21,43 @@
 
 
     <com.nambimobile.widgets.efab.ExpandableFabLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.nambimobile.widgets.efab.Overlay
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:overlay_orientation="portrait"/>
+            app:overlay_orientation="portrait" />
 
         <com.nambimobile.widgets.efab.ExpandableFab
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
             app:efab_orientation="portrait" />
+
         <com.nambimobile.widgets.efab.FabOption
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_orientation="portrait"
-            app:label_text="Create New Recipe"
             android:id="@+id/btnAddRecipe"
-            android:src="@drawable/pencil"
-            android:onClick="onClickPortraitOption1"/>
-        <com.nambimobile.widgets.efab.FabOption
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="onClickPortraitOption1"
+            android:src="@drawable/pencil"
             app:fab_orientation="portrait"
-            app:label_text="Sign out"
+            app:label_text="Create New Recipe" />
+
+        <com.nambimobile.widgets.efab.FabOption
             android:id="@+id/btnSignout"
-            android:src="@drawable/car"
-            android:onClick="onClickPortraitOption1"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClickPortraitOption1"
+            android:src="@drawable/ic_baseline_exit"
+            app:fab_orientation="portrait"
+            app:label_text="Sign out" />
 
     </com.nambimobile.widgets.efab.ExpandableFabLayout>
 
