--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -17,11 +17,27 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnBack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|top"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:clickable="true"
+                app:fabSize="mini"
+                app:maxImageSize="20dp"
+                app:srcCompat="@drawable/white_back"
+                android:focusable="true"
+                android:contentDescription="@string/back" />
+
             <ImageView
                 android:id="@+id/RecipeImage"
-                android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
-                android:layout_height="190dp"/>
+                android:layout_height="190dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/cooking_image" />
             <View
                 android:background="@color/white"
                 android:layout_width="match_parent"
@@ -54,7 +70,13 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="241dp">
+                android:layout_height="241dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:fadeScrollbars="false"
+                android:scrollbarSize="15dp"
+                android:scrollbarStyle="insideInset"
+                android:scrollbars="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -68,7 +90,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginRight="16dp"
-                        android:text="TextView"
+                        android:text="@string/textview"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:verticalScrollbarPosition="defaultPosition" />
